2003-01-16  Roland Mas  <lolando@debian.org>

	* www/include/languages/*.tab: Recoded everything to UTF-8.

2003-01-15  Reinhard Spisser   <reinhard@spisser.it>

	* www/include/languages/Base.tab: added forum labels

        * www/forum/*: localized forum
 
        * www/include/languages/Italian.tab: translations of new forum strings

2003-01-15  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/include/languages/Spanish.tab: translations for Reinhard's
	new strings.

2003-01-15

	***** PRE9

2003-01-15  Roland Mas  <lolando@debian.org>

	* common/include/Plugin.class: PHPdoc.

	* common/include/PluginManager.class: ditto.  Also, moved code to
	pre.php.

	* www/include/pre.php: Added code from PluginManager.class.

	* db/20021214.sql: Added plugin subsystem tables and sequences.

2003-01-14  Roland Mas  <lolando@debian.org>

	* www/include/Layout.class: Split subMenu() into BeginSubMenu(),
	PrintSubMenu() and EndSubMenu().  subMenu() still exists, and
	calls these three methods in a row, giving the same net result.

	* www/include/html.php: Replaced the call to subMenu() in
	site_user_header by successive calls to the three aforementioned
	methods, with a plugin hook in-between.

	* deb-specific/install-postfix.sh: Applied patch #102 by Julien
	Goodwin.  Should have a better chance of a working
	gforge-mta-postfix now.  Thanks, Julien.

2003-01-13 Reinhard Spisser (reinhard@spisser.it)

	* www/docman/*: fully localized

	* www/include/languages/Base.tab: added missing strings

	* www/include/language/Italian.tab: Italian Docman Localization

2003-01-13 Tom Copeland (tom@infoether.com)

	* www/survey/admin/add_survey.php: Survey title is now a required field.

	* www/project/admin/qrs.php: File name/type/release name/processor
	type are now required fields.

2003-01-13  Tim Perdue (tim@gforge.org)

	* more simplication of db_stats_agg.php by creating views

2003-01-13  Scott Armstrong (scottbird7)

	* Fixed/completed /cronjobs/mail/* mailing list and alias creation