@@ -15,7 +15,7 @@
 require_once('pre.php');    
 require_once('common/include/account.php');
 
-//only projects can use cvs, and only if they have it turned on
+//only projects can use the bug tracker, and only if they have it turned on
 $project =& group_get_object($group_id);
 
 if (!$project->isProject()) {
@@ -27,6 +27,9 @@ if (!$project->usesCVS()) {
 
 site_project_header(array('title'=>'CVS Repository','group'=>$group_id,'toptab'=>'cvs','pagename'=>'cvs','sectionvals'=>array($project->getPublicName())));
 
+$res_grp = db_query("SELECT * FROM groups WHERE group_id='$group_id'");
+
+$row_grp = db_fetch_array($res_grp);
 
 // ######################## table for summary info
 
@@ -34,25 +37,45 @@ print '<table width="100%"><tr valign="top"><td width="65%">'."\n";
 
 // ######################## anonymous CVS instructions
 
-if ($project->enableAnonCVS()) {
-	print $Language->getText('cvs', 'anoncvs').
-	'<p><tt>cvs -d:pserver:anonymous@'.$sys_cvs_host.':/cvsroot/'.
-	$project->getUnixName().
-	' login<br />&nbsp;<br />cvs -z3 -d:pserver:anonymous@'.
-	$sys_cvs_host.':/cvsroot/'.
-	$project->getUnixName().' co <em>modulename</em></tt></p><p>'.
-	$Language->getText('cvs', 'anoncvsup').'</p>';
+if ($row_grp['is_public']) {
+  if($GLOBALS['sys_cvs_single_host']) {
+    print $Language->getText('cvs', 'anoncvs').' 
+    <p><tt>cvs -d:pserver:anonymous@' . $GLOBALS['sys_cvs_host'] . ':/cvsroot/'.$row_grp['unix_group_name'].' login <br><br>
+cvs -z3 -d:pserver:anonymous@' . $GLOBALS['sys_cvs_host'] . ':/cvsroot/'.$row_grp['unix_group_name'].' co  <i>modulename</i>
+</tt>
+
+
+<p>'.$Language->getText('cvs', 'anoncvsup');
+  } else {
+    print $Language->getText('cvs', 'anoncvs').'
+
+<p><tt>cvs -d:pserver:anonymous@cvs.'.$row_grp['unix_group_name'].'.'.$GLOBALS['sys_default_domain'].':/cvsroot/'.$row_grp['unix_group_name'].' login <br><br>
+cvs -z3 -d:pserver:anonymous@cvs.'.$row_grp['unix_group_name'].'.'.$GLOBALS['sys_default_domain'].':/cvsroot/'.$row_grp['unix_group_name'].' co <i>modulename</i>
+</tt>
+
+ 
+<p>'.$Language->getText('cvs', 'anoncvsup');
+  }
 }
-else {
-        print $Language->getText('cvs','noanoncvs');
-}
+
 // ############################ developer access
+
+if($GLOBALS['sys_cvs_single_host']) {
+
+print $Language->getText('cvs', 'devcvs').'
+
+<p><tt>export CVS_RSH=ssh
+<br><br>cvs -z3 -d:ext:<i>developername</i>@'.$GLOBALS['sys_cvs_host'].':/cvsroot/'.$row_grp['unix_group_name'].' co <i>modulename</i>
+</tt>';
+
+} else {
 
 print $Language->getText('cvs', 'devcvs').' 
 
 <p><tt>export CVS_RSH=ssh
-<br />&nbsp;<br />cvs -z3 -d:ext:<em>developername</em>@'.$sys_cvs_host.':/cvsroot/'.$project->getUnixName().' co <em>modulename</em></tt></p>';
-
+<br><br>cvs -z3 -d:ext:<i>developername</i>@cvs.'.$row_grp['unix_group_name'].'.'.$GLOBALS['sys_default_domain'].':/cvsroot/'.$row_grp['unix_group_name'].' co <i>modulename</i>
+</tt>';
+}
 // ################## summary info
 
 print '</td><td width="35%">';
@@ -62,13 +85,13 @@ print $HTML->boxTop($Language->getText('cvs', 'history'));
 
 $res_cvshist = db_query("SELECT * FROM group_cvs_history WHERE group_id='$group_id'");
 if (db_numrows($res_cvshist) < 1) {
-	//print '<p>This project has no CVS history.</p>';
+	//print '<p>This project has no CVS history.';
 } else {
 
-print '<p><strong>Developer (30 day/Commits) (30 day/Adds)</strong><br />&nbsp;';
+print '<p><b>Developer (30 day/Commits) (30 day/Adds)</b><br>&nbsp;';
 
 while ($row_cvshist = db_fetch_array($res_cvshist)) {
-	print '<br />'.$row_cvshist['user_name'].' ('.$row_cvshist['cvs_commits_wk'].'/'
+	print '<br>'.$row_cvshist['user_name'].' ('.$row_cvshist['cvs_commits_wk'].'/'
 		.$row_cvshist['cvs_commits'].') ('.$row_cvshist['cvs_adds_wk'].'/'
 		.$row_cvshist['cvs_adds'].')';
 }
@@ -77,17 +100,11 @@ while ($row_cvshist = db_fetch_array($res_cvshist)) {
 
 // ############################## CVS Browsing
 
-$anonymous = 1;
-if (session_loggedin()) {
-        $perm =& $project->getPermission(session_get_user());
-	$anonymous = !$perm->isMember();
-}
-
-if ($project->enableAnonCVS() || !$anonymous) {
+if ($row_grp['is_public']) {
 	print $Language->getText('cvs', 'browsetree').' 
-<ul>
-<li><a href="'.account_group_cvsweb_url($project->getUnixName()).'">
-<strong>'.$Language->getText('cvs', 'browseit').'</strong></a>';
+<UL>
+<li><a href="'.account_group_cvsweb_url($row_grp['unix_group_name']).'">
+<b>'.$Language->getText('cvs', 'browseit').'</b></a></li>';
 }
 
 print $HTML->boxBottom();
